# vxlan-manager

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.yml  spec.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/src/: __init__.py  config.py  main.py
backend/src/api/: __init__.py  dependencies.py  middleware.py
backend/src/api/endpoints/: machines.py  websocket.py
backend/src/db/: __init__.py  database.py
backend/src/models/: __init__.py  failure_log.py  machine.py  ping_status.py  websocket.py
backend/src/services/: __init__.py  backoff.py  machine_service.py  monitor_service.py  ping_status_service.py  ping_utils.py  websocket_service.py
backend/src/validators/: __init__.py  network.py
database/: init.sql
docs/: architecture.md  deployment.md  register-machine.sh
frontend/: Dockerfile  README.md  next.config.js  package.json  tailwind.config.ts
frontend-vanilla/: nginx.conf
frontend-vanilla/src/: index.html
frontend-vanilla/src/components/: MachineCard.js
frontend-vanilla/src/services/: api.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ConnectionStatus.tsx  MachineCard.tsx  MachineList.tsx  StatusFilter.tsx
frontend/hooks/: useMachines.ts  useWebSocket.ts
frontend/lib/: api.ts  utils.ts  websocket.ts
frontend/types/: machine.ts
specs/001-vxlan-machine-manager/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+6 files in other folders)
